--- a/Memoria/Autorizacion.tex
+++ b/Memoria/Autorizacion.tex
@@ -1,2 +1,8 @@
 Por la presente, los autores de este proyecto autorizamos a la Universidad Complutense a difundir y utilizar con fines acad'emicos, no comerciales y
-mencionando expresamente a sus autores, tanto la propia memoria, como el c'odigo, la documentaci'on y/o el prototipo desarrollado.
+mencionando expresamente a sus autores, tanto la propia memoria, como el c'odigo, la documentaci'on y/o el prototipo desarrollado.\bigskip \\
+\bigskip \\ \bigskip \\
+Mar'ia Alonso Lopez\bigskip \\ \bigskip \\
+Leticia Garc'ia Garc'ia\bigskip \\ \bigskip \\
+Jose David Soria Soler\bigskip \\ \bigskip \\
+
+
