--- a/Memoria/Manual_usuario.tex
+++ b/Memoria/Manual_usuario.tex
@@ -95,6 +95,8 @@ En caso de que los datos sean correctos se mostrar'a por pantalla el expediente 
     	\caption{}\label{fig:expediente}
 \end{figure*}
 
+\newpage 
+
 \item Salir:\newline
 Esta opci'on nos permite salir de la aplicaci'on y apagar el PDA.
  
@@ -102,3 +104,5 @@ Esta opci'on nos permite salir de la aplicaci'on y apagar el PDA.
 
 
 \end{enumerate}
+
+\newpage 
