--- a/Memoria/agradecimientos.tex
+++ b/Memoria/agradecimientos.tex
@@ -1,6 +1,7 @@
 Queremos mencionar a las siguientes personas por la ayuda que nos han proporcionado durante el desarrollo de este proyecto:
 \begin{itemize}
 \item Manuel Ortega Ort'iz de Apodaca
+\item Mar'ia Teresa Hortal'a Gonz'alez
 \item Juan Antonio Recio Garc'ia
 \item Juan Rodr'iguez Hortal'a
 \item Luis V'azquez  Mart'inez
