--- a/Memoria/base_datos.tex
+++ b/Memoria/base_datos.tex
@@ -10,7 +10,7 @@ Dado los escasos casos de uso que se han implementado a lo largo del proyecto, n
 \end{verbatim}
 
 La tabla ''tablaMedicos'' tiene dos entradas, usuario y clave, correspondientes con los datos que tienen que introducir los m'edicos cada vez que quieren iniciar sesi'on en el PDA:
-
+\newpage
 \begin{verbatim}
 +---------+--------+
 | USUARIO | CLAVE  |
