--- a/Memoria/consultar_expediente.tex
+++ b/Memoria/consultar_expediente.tex
@@ -33,7 +33,10 @@ En caso de fallo (el nombre paciente no se encuentra en la base de datos del hos
 
 \begin{figure*}[h!]
 	\begin{center}
-        		\framebox{\includegraphics[scale=0.4]{consultar_expediente.png}}
+        		%\framebox{\includegraphics[scale=0.4]{consultar_expediente.png}}
+		\framebox{\includegraphics[scale=0.6]{consultar_expediente.png}}
      	\end{center}
     	\caption{Diagrama de secuencia de consultar expediente}\label{fig:consulta_expediente}
 \end{figure*}
+\pagebreak
+\newpage 
