--- a/Memoria/cu_imprimir.tex
+++ b/Memoria/cu_imprimir.tex
@@ -37,7 +37,8 @@ En caso de fallo:
 
 \begin{figure*}[h!]
 	\begin{center}
-        		\framebox{\includegraphics[scale=0.4]{dsecuenciaimprimir.png}}
+        		%\framebox{\includegraphics[scale=0.4]{dsecuenciaimprimir.png}}
+		\framebox{\includegraphics[scale=0.6]{dsecuenciaimprimir.png}}
      	\end{center}
     	\caption{Diagrama de secuencia de impresi'on de documentos}\label{fig:cu_imprimir}
 \end{figure*}
