--- a/Memoria/red.tex
+++ b/Memoria/red.tex
@@ -5,16 +5,16 @@ La red tiene se compone de dos partes:
 \end{itemize}
 \begin{figure*}[h!]
 	\begin{center}
-        		\framebox{\includegraphics[scale=0.4{DiagramaRed.png}} 
+        		\framebox{\includegraphics[scale=0.5]{DiagramaRed.png} } 
      	\end{center}
     	\caption{Diagrama de red}
 	\label{fig:diaRed}
 \end{figure*}
 
-La distribuci'on de los puntos de acceso se debe realizar ubic'andolos en las esquinas de unos cuadradros imaginarios. El n'umero de puntos y dispostivos  perif'ericos depende del tamaño de la planta. Un ejemplo de planta ser'ia el de la figura \ref{fig:diaPlantaRed}
+La distribuci'on de los puntos de acceso se debe realizar ubic'andolos en las esquinas de unos cuadradros imaginarios. El n'umero de puntos y dispostivos  perif'ericos depende del tamaño de la planta. Un ejemplo de planta ser'ia el de la figura \ref{fig:diaPlantaRed}.
 \begin{figure*}[h!]
 	\begin{center}
-        		\framebox{\includegraphics[scale=0.4{plantaRed.png}} 
+        		\framebox{\includegraphics[scale=0.5]{plantaRed.png} } 
      	\end{center}
     	\caption{Mapa de una planta}
 	\label{fig:diaPlantaRed}
