--- a/Memoria/coste.tex
+++ b/Memoria/coste.tex
@@ -1,8 +1,8 @@
 \subsubsection{Coste de la infraestructura}
 Definamos primero lo que va a ser la infraestructura:\\ La infraestructura es todo aquello que se debe montar y poner en funcionamiento
 para que la herramienta pueda ejecutarse en las mejores condiciones y sin ning'un tipo de problema. Son todos aquellos aparatos, maquinas
-y dem'a utensilios que servir'an para la correcta implantaci'on de nuestro sistema, obteniendo as'i un emplazamiento seguro y 
-robusto en cuanto a eficacia y posibles problemas.\\ Definamos por tanto que herramientas y aparatos debemos instaurar para llevar
+y dem'as utensilios que servir'an para la correcta implantaci'on de nuestro sistema, obteniendo as'i un emplazamiento seguro y 
+robusto en cuanto a eficacia y posibles problemas.\\ Definamos por tanto que herramientas y aparatos debemos instalar para llevar
 a cabo nuestro objetivo, y del mismo modo establezcamos el presupuesto.\\
 
 \begin{itemize}
@@ -15,8 +15,7 @@ a cabo nuestro objetivo, y del mismo modo establezcamos el presupuesto.\\
 	\end{itemize}
 \item	Dispositivos tipo PDA para el personal.
 	\begin{itemize}
-	\item Descripci'on : Son todos aquellos dispositivos que el personal deber'a llevar consigo y de esta manera, poder ser localizados
-				  siempre que este solicite un servicio o algun otro necesite de los suyos. 
+	\item Descripci'on : Son todos aquellos dispositivos que el personal deber'a llevar consigo para poder ser localizados siempre que soliciten un servicio. 
 	\item N'umero de unidades : Seg'un plantilla.
 	\item Precio : 300 euros por dispositivo.
 	\end{itemize}
@@ -32,11 +31,7 @@ a cabo nuestro objetivo, y del mismo modo establezcamos el presupuesto.\\
 \end{itemize}
 
 \subsubsection{Coste de desarrollo}
-El coste del desarrollo, como as'i lo llamamos, viene a ser el coste de desarrollar y adaptar el sistema a las nueva instalaci'on, a las diferentes
-topolog'ias existentes en el edificio, as'i como el mapeo de cada planta en la base de datos para su futura utilizaci'on. Del mismo modo, el coste
-de mantenimiento viene inclu'ido aqu'i ya que obviamente, ante futuras situaciones de posible ampliaci'on de sus estructuras, nos vemos
-obligados a mantener nuestro grado de satisfacci'on del cliente. De este modo, cualquier tipo de obra, construcci'on o modificaci'on 
-en las instalaciones debe ser comunicado de inmediato para su adaptaci'on al c'odigo del programa.
+El coste del desarrollo cubre eldesarrollar y adaptar el sistema a la nueva instalaci'on, a las diferentes topolog'ias existentes en el edificio, as'i como el mapeo de cada planta en la base de datos para su futura utilizaci'on. Del mismo modo, el coste de mantenimiento viene inclu'ido aqu'i ya que obviamente, ante futuras situaciones de posible ampliaci'on de sus estructuras, nos vemos obligados a mantener nuestro grado de satisfacci'on del cliente. De este modo, cualquier tipo de obra, construcci'on o modificaci'on en las instalaciones debe ser comunicado de inmediato para su adaptaci'on al c'odigo del programa.
 \begin{itemize}
 \item Precio : 3000 euros.
 \end{itemize}
